@@ -122,7 +122,7 @@
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               android:layout_marginBottom="8dp"
-              android:visibility="@{viewModel.isQuantityUnitStockChangeable() ? View.GONE : View.VISIBLE}"
+              android:visibility="@{viewModel.isQuantityUnitStockChangeableLive ? View.GONE : View.VISIBLE}"
               app:cardBackgroundColor="?attr/colorErrorContainer">
 
               <TextView
@@ -141,7 +141,7 @@
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               android:layout_marginBottom="8dp"
-              android:visibility="@{viewModel.isQuantityUnitStockChangeable() ? View.VISIBLE : View.GONE}">
+              android:visibility="@{viewModel.hasProductAlreadyStockTransactionsLive ? View.VISIBLE : View.GONE}">
 
               <TextView
                 style="@style/Widget.Grocy.TextView.Paragraph"
@@ -155,7 +155,7 @@
             <LinearLayout
               style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Clickable"
               android:onClick="@{() -> viewModel.showQuBottomSheet(formData.STOCK)}"
-              android:alpha="@{viewModel.isQuantityUnitStockChangeable() ? 1.0f : 0.4f}">
+              android:alpha="@{viewModel.isQuantityUnitStockChangeableLive ? 1.0f : 0.4f}">
 
               <ImageView
                 style="@style/Widget.Grocy.ImageView.ListItem.Icon"
